fixes: - overlaps in responsive homepage header - unwanted line break navbar (desktop chrome, xs layout)

--- a/core/static/scss/_navbar.scss
+++ b/core/static/scss/_navbar.scss
@@ -55,7 +55,7 @@
 .navbar-brand {
     background: url("/static/images/logo.png") no-repeat left center;
     padding-left: 80px;
-    font-size: 16px;
+    font-size: 15px;
     @media screen and (min-width: $screen-xs) {
         font-size: 18px;
     }
